# playground-localstack-rust

./: docker-compose.yml  local.tf
my_lambda_function/: Cargo.toml
